--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+
+html, body {
+  height: 100%;
+  width: 100%;
+}
+#sidebar-container {
+  height: 100%;
+  min-height: 100%;
+}
+
+#sidebar {
+  height: 100%;
+  min-height: 100%;
+  min-width: 180px;
+}
