--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,9 @@
 <div class="d-flex" id="sidebar-container">
 
-  <div class="bg-dark border-right p-3" id="sidebar">
-    <h3 class="text-light">GifsApp</h3>
-
-    <hr class="text-white" />
-
-    <div class=" list-group list-reset">
-      <a href="#" class="list-group-item list-group-item-action">
-        Dashboard
-      </a>
-      <a href="#" class="list-group-item list-group-item-action">
-        Dashboard
-      </a>
-      <a href="#" class="list-group-item list-group-item-action">
-        Dashboard
-      </a>
-      <a href="#" class="list-group-item list-group-item-action">
-        Dashboard
-      </a>
-    </div>
-
-  </div>
-
+  <!-- Sidebar -->
+  <app-sidebar></app-sidebar>
   <!-- End Sidebar -->
+
   <div class="container">
     <div class="row p-3">
       <div class="col">
@@ -35,7 +16,8 @@
     <div class="row">
       <div class="col">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus reiciendis et sapiente sed hic modi,
-        laudantium dolorum voluptate adipisci, unde, repellendus est. Culpa voluptatum dolor quam cupiditate iste iusto
+        laudantium dolorum voluptate adipisci, unde, repellendus est. Culpa voluptatum dolor quam cupiditate iste
+        iusto
         velit.
       </div>
     </div>
