--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,23 +4,5 @@
   <app-sidebar></app-sidebar>
   <!-- End Sidebar -->
 
-  <div class="container">
-    <div class="row p-3">
-      <div class="col">
-        <h5>Buscar: </h5>
-        <input type="text" class="form-control" placeholder="Buscar gifs">
-      </div>
-    </div>
-    <hr />
-
-    <div class="row">
-      <div class="col">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus reiciendis et sapiente sed hic modi,
-        laudantium dolorum voluptate adipisci, unde, repellendus est. Culpa voluptatum dolor quam cupiditate iste
-        iusto
-        velit.
-      </div>
-    </div>
-  </div>
-
+  <app-gifs-page class="container"></app-gifs-page>
 </div>
