add pipe for capitalize history

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -7,7 +7,8 @@
 
   <div class=" list-group list-reset">
     <a *ngFor="let history of userHistory" href="#" class="list-group-item list-group-item-action">
-      {{history}}
+      {{history | titlecase}}
+      <!--pipe-->
     </a>
   </div>
 
