--- a/src/app/gifs/result/result.component.html
+++ b/src/app/gifs/result/result.component.html
@@ -1,4 +1,12 @@
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus reiciendis et sapiente sed hic modi,
-laudantium dolorum voluptate adipisci, unde, repellendus est. Culpa voluptatum dolor quam cupiditate iste
-iusto
-velit.
+<div class="row">
+  <div *ngFor="let gif of results" class="col-md-4 col-sm-6">
+    <div class="card">
+      <img [src]="gif.images.downsized_medium.url" [alt]="gif.title" class="my-card card-img-top">
+      <div class="card-body">
+        <p class="card-text">
+          {{gif.title}}
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
